--- a/group-allocation/package.json
+++ b/group-allocation/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
